@@ -1,0 +1,55 @@
+/*
+ * Licensed to Crate under one or more contributor license agreements.
+ * See the NOTICE file distributed with this work for additional
+ * information regarding copyright ownership.  Crate licenses this file
+ * to you under the Apache License, Version 2.0 (the "License"); you may
+ * not use this file except in compliance with the License.  You may
+ * obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
+ * implied.  See the License for the specific language governing
+ * permissions and limitations under the License.
+ *
+ * However, if you have executed another commercial license agreement
+ * with Crate these terms will supersede the license and you may use the
+ * software solely pursuant to the terms of the relevant commercial
+ * agreement.
+ */
+
+package io.crate.breaker;
+
+import javax.annotation.Nullable;
+import java.util.Collection;
+
+public class SetSizeEstimator extends SizeEstimator<Object> {
+
+    private final SizeEstimator<Object> elementEstimator;
+
+    public SetSizeEstimator(SizeEstimator<Object> elementEstimator) {
+        this.elementEstimator = elementEstimator;
+    }
+
+    @Override
+    public long estimateSize(@Nullable Object value) {
+        if (value == null) {
+            return 8L;
+        }
+        return sizeFromCollection((Collection) value);
+    }
+
+    private long sizeFromCollection(Collection value) {
+        // value should only be a collection if it's a SetType
+        // hashSet + internal HashMap of hashSet is 64 bytes on a 64-bit JVM with compressed oop
+        long size = 64;
+
+        for (Object val : value) {
+            size += elementEstimator.estimateSize(val);
+        }
+        return size;
+    }
+
+}
